test/visibility/import/enablesUnqualified/multipleUnqualified/badName-this.good
badName-this.chpl:4: In module 'User':
badName-this.chpl:5: error: cannot 'import' symbol 'this' as it is not defined in 'Foo'
